--- a/index.html
+++ b/index.html
@@ -450,6 +450,8 @@
                     <p>I designed and developed my personal portfolio website from scratch using HTML and CSS, focusing on a clean dark theme with subtle animations and responsiveness. Every section—from hero to projects and contact—is crafted to highlight both aesthetics and usability. This project reflects my hands-on approach to learning, experimenting with design, and showcasing my skills in an interactive way.</p>
                     <div class="project-tags">
                         <span>HTML5</span><span>CSS</span><span>JavaScript</span>
+                         <div class="project-links">
+                       <a href="https://github.com/Ayushi3017/Ayushi_Portfolio/edit/main/index.html" target="_blank">View Repo</a>
                     </div>
                 </div>
             </div>
