Update repo link

--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
                         <span>Python</span><span>Data Visualization</span><span>Data Cleaning and analysis</span>
                     </div>
                     <div class="project-links">
-                       <a href="https://github.com/Ayushi3017/accenture-nordics-forage-simulation" target="_blank">View Repo</a>
+                       <a href="https://github.com/Ayushi3017/JP.Morgan-Chase_Virtual_Internship" target="_blank">View Repo</a>
                     </div></div>              
                 <div class="project-card">
                     <h4>My Portfolio</h4>
@@ -550,3 +550,4 @@
 </body>
 </html>
 ```
+
