Change Repo structure in project work

--- a/index.html
+++ b/index.html
@@ -427,12 +427,12 @@
             <h2>My Work</h2>
             <div class="projects-grid">
                 <div class="project-card">
-                    <h4>Accenture-nordics-Virtual-Simulation</h4>
-                        I completed the Accenture Nordics virtual job simulation, where I worked with an app Digital Health and analyzed client data to uncover opportunities for digital transformation, conducted market research and stakeholder analysis, and proposed a cloud-based solution tailored to client needs. The experience involved developing actionable insights and aligning business objectives with innovative tech strategies to drive sustainable growth.<div class="project-tags">
-                        <span>Cloud Architecture</span><span>Security</span><span>Architecture Design</span>
+                    <h4>Fake-News-Detector</h4>
+                    Built a Fake News Detector using Python, ML and NLP to classify news as real or fake, promoting accurate information online
+                        <span>ML</span><span>NLP</span><span>TensorFlow</span>
                     </div>
                     <div class="project-links">
-                       <a href="https://github.com/Ayushi3017/accenture-nordics-forage-simulation" target="_blank">View Repo</a>
+                       <a href="https://github.com/Ayushi3017/Fake_News_Detector" target="_blank">View Repo</a>
                     </div>
                 
                 </div>
@@ -550,5 +550,6 @@
 </body>
 </html>
 ```
+
 
 
