--- a/index.html
+++ b/index.html
@@ -428,13 +428,14 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <h4>Fake-News-Detector</h4>
-                    Built a Fake News Detector using Python, ML and NLP to classify news as real or fake, promoting accurate information online
-                        <span>ML</span><span>NLP</span><span>TensorFlow</span>
+Developed a Fake News Detector using Python and machine learning techniques to classify news articles as real or fake. The model leverages NLP for text preprocessing and feature extraction, ensuring accurate detection of misleading content. A practical tool for promoting credible information online.                        
+                    <div class="project-tags">
+                    <span>ML</span><span>NLP</span><span>TensorFlow</span>
                     </div>
                     <div class="project-links">
                        <a href="https://github.com/Ayushi3017/Fake_News_Detector" target="_blank">View Repo</a>
                     </div>
-                
+                </div>
                 </div>
                 <div class="project-card">
                     <h4>JP-Morgan-Virtual-Simulation </h4>
@@ -550,6 +551,7 @@
 </body>
 </html>
 ```
+
 
 
 
